css/styles.css
body, h1,h2,h3,h4,h5,h6 {font-family: "Ubuntu", sans-serif}

.extlink {color: inherit;text-decoration: none;}

body {
	color: #f5f5f5;
	background-color: black;
	font-size: 18px;
}
header {text-align: center;}
header h1 {
	font-size: 64px;
	font-weight: normal;
}
h2 {
	font-size: 28px;
	font-weight: normal;
}
header p {font-size: 32px;}
footer {
	text-align: center;
	padding-top: 64px;
	padding-bottom: 16px
}

input {
	padding: 8px 0px 8px 4px;
	width: 95%;
	font-size: 16px;
	color: #404040;
}

button {
	-webkit-appearance: none;
	height: 46px;
	padding: 8px 16px 8px 16px;
	color: #404040;
	transition-duration: 0.4s;
	background-color: #f5f5f5;
}
button:hover {
	color: #1a1a1a;
	background-color: #cccccc;
}
::placeholder {color: #404040;opacity: 1;}
:-ms-input-placeholder {color: #404040;}
::-ms-input-placeholder {color: #404040;}

/* Index */

#main {
	margin-left: auto;
	margin-right: auto;
	width: 50%;
}

#intro {
	display: block;
}

.service {
	display: block;
	text-align: left;
}
.service hr {
	width:300px;
	opacity: 0.5;
	float: left;
}
.service img {
	width:60px;
	float: left;
	padding: 0px 24px 0px 0px;
}
.service a {
	padding: 12px 0px 0px 12px;
	display: block;
	width: 60%;
	margin-right: auto;
	border: 1px solid black;
}
.service a:hover {
	border: 1px solid white;
}
.service .a p {
	float: right;
}
.service table {
	padding: 12px 0px 0px 12px;
	width: 60%;
	margin-right: auto;
}

.service span {
	font-size:20px;
}

/* DandDB */

.settings {
	color: #f5f5f5;
	float: right;
	padding-right: 32px;
}
.settings i {
	font-size: 64px;
	color: #f5f5f5;
}
.settings p {
	padding-right: 1px;
}
.settings:hover .dropdown {
	display: block;
}
.dropdown {
	font-size: 16px;
	display:none;
	-webkit-appearance: none;
	-moz-appearance: none;
	position: absolute;
	text-align: right;
	z-index: 1;
}

#dbmain {
	padding: 8px 32px 8px 32px;
}
#dbsearch {
	float: left;
}
#dbtree {
	float: right;
}
.action {
	display: block;
	width: 50%;
	padding: 8px 32px 8px 32px;
}

/* DandDB Admin */

#adminmain {
	width: 100%;
	margin-left: 8px;
	margin-right: 8px;
	padding-top: 16px;
	padding-bottom: 64px;
}
.admin {
	display: block;
	width: 33.33%;
	float: left;
	padding-bottom: 12px;
}
.admin button {
	float: left;
}
.admin iframe {
	height: 46px;
	float: none;
	border: 0px solid white;
}

@media only screen and (max-width: 600px) {
	header h1 {font-size: 32px;}
	header p {font-size: 16px;}
	footer {font-size: 8px;}
	h2 {font-size: 20px;}

	/* Index */
	#main {width: 90%;}

	/* DanDB */
	#dbmain {padding: 8px 4px 8px 4px;font-size:14px;}
	#dbsearch {float: none;}
	#dbtree {float: none;}
	.action {width: 100%;padding: 8px 16px 8px 16px;}
	.settings i {font-size: 32px;}

	/* DandDB Admin */
	.admin {width: 100%;float: none;}
}

